# taskledger

./: .archledger.toml  .codecrate.toml  .gitignore  .planledger.toml  .pre-commit-config.yaml  .ruff.toml  .specweave.toml  .taskledger.toml  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py  taskledger_ledgercore_refactor_brief.md
.archledger/: source-state.json  storage.yaml
docs/: api.rst  architecture_taskledger_split.md  architecture_taskledger_split.rst  build.sh  command_contract.md  command_contract.rst  conf.py  full_task_cycle.rst  index.rst  multi_repo.rst  public_surface.md  public_surface.rst  service_boundary_whitelist.md  service_boundary_whitelist.rst  sync.rst  transfer.rst  usage.rst
scripts/: find_code_clones.py
taskledger/: __init__.py  __main__.py  cli.py  cli_actor.py  cli_actor_v2.py  cli_archive.py  cli_bdd.py  cli_build.py  cli_changelog.py  cli_common.py  cli_compose.py  cli_config.py  cli_context.py  cli_execution_requests.py  cli_handoff_v2.py  cli_implement.py  cli_implement_v2.py  cli_item.py  cli_ledger.py  cli_memory.py  cli_migrate.py  cli_migrate_v2.py  cli_misc.py  cli_misc_v2.py  cli_pipeline.py  cli_plan.py  cli_plan_v2.py  cli_question.py  cli_question_v2.py  cli_ref.py  cli_release.py  cli_repo.py  cli_report.py  cli_review.py  cli_runs.py  cli_runtime_support.py  cli_storage.py  cli_sync.py  cli_task.py  cli_task_v2.py  (+18 more)
tests/: conftest.py  test_active_task.py  test_actor_harness_state.py  test_actor_resolution.py  test_agent_command_logging.py  test_agent_session_protocol.py  test_atomic_fast_io.py  test_bdd_cli.py  test_bdd_gherkin.py  test_bdd_models.py  test_bdd_report_import.py  test_bdd_storage.py  test_bdd_validation_integration.py  test_changelog_build.py  test_changelog_entries.py  test_cli_command_contract.py  test_cli_import_resilience.py  test_code_reviews.py  test_command_example_linter.py  test_command_inventory.py  test_command_runner.py  test_compact_mutation_output.py  test_compose.py  test_config_cli.py  test_delta_remaining_contracts.py  test_docs_and_skill.py  test_doctor.py  test_doctor_v2.py  test_domain_policies.py  test_event_logging_config.py  test_events.py  test_file_link_snapshots.py  test_find_code_clones_script.py  test_handoff_lifecycle.py  test_help_subprocess.py  (+84 more)
(+342 files in other folders)
